[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/senhorBarriga.gd" type="Script" id=1]
[ext_resource path="res://assets/Inimigos/senhorBarriga0.png" type="Texture" id=2]
[ext_resource path="res://assets/Inimigos/senhorBarrigaPunch.png" type="Texture" id=3]
[ext_resource path="res://assets/Inimigos/senhorBarriga1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.7377, 31.6573 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.47629, 4.3698 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.4887, 31.9077 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.4914, 36.1635 )

[node name="SenhorBarriga" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.375517, -2.2531 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "Run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.250336, -0.250343 )
shape = SubResource( 2 )

[node name="Mao" type="Area2D" parent="." groups=[
"mao",
]]
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Mao"]
shape = SubResource( 3 )

[node name="Corpo" type="Area2D" parent="." groups=[
"corpo",
]]
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Corpo"]
shape = SubResource( 4 )

[node name="Fora" type="Area2D" parent="." groups=[
"fora",
]]
visible = false
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Fora"]
shape = SubResource( 5 )

[connection signal="area_entered" from="Mao" to="." method="_on_Mao_area_entered"]
[connection signal="body_entered" from="Mao" to="." method="_on_Mao_body_entered"]
[connection signal="body_exited" from="Mao" to="." method="_on_Mao_body_exited"]
[connection signal="body_entered" from="Corpo" to="." method="_on_Corpo_body_entered"]
[connection signal="area_entered" from="Fora" to="." method="_on_Fora_area_entered"]
[connection signal="area_exited" from="Fora" to="." method="_on_Fora_area_exited"]
